//add changes here
10/6/23:
    - Created the base of the project
    - Added all of the scene parts to an exported variable for use in outside testing (map1.js)

10/7/23-10/8/23:
    - Created mouseCamera.js
    - Attempted to find an alternative for window.onload
        -Found event DOMContentLoaded (index.js)