@@ -6,4 +6,8 @@
 10/7/23-10/8/23:
     - Created mouseCamera.js
     - Attempted to find an alternative for window.onload
-        -Found event DOMContentLoaded (index.js)
+        -Found [not-working] event DOMContentLoaded (index.js)
+            - Event does not fire. Removing..
+
+10/9/23:
+    - Modified mouseCamera.js to add an event listener for (#newCanva)'s mouseover event (mouseCamera.js)
